5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1716_2496.log
== TEST (2019-05-14 09:57:05) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
	
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:01:38) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	print(soma)
	soma=soma+n
	n = int(input("numero :"))
	
	
-- OUTPUT:
0
-525
550
883
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:02:01) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	print(soma)
	soma=soma+n
	n = int(input("numero :"))
	
	
-- EXECUTION TIME:
0.876283
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-525
550
883
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
0
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:02:05) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	print(soma)
	soma=soma+n
	n = int(input("numero :"))
	
	
-- OUTPUT:
0
-525
550
883
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:03:26) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
	n = int(input("numero :"))
	
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:03:38) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
	n = int(input("numero :"))
	
	
-- EXECUTION TIME:
1.08157
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:04:14) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
	n = int(input("numero :"))
	
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:04:39) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
	n = int(input("numero :"))
	
	
-- EXECUTION TIME:
1.68722
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:46) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
0.706124
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:47) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
n = int(input("numero :"))
	
	
-- EXECUTION TIME:
1.30005
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:47) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
1.99477
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:48) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3.13867
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:48) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
4.11368
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:48) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
4.6772
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:56) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.17405
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:57) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.46639
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:57) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.70611
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:57) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.59159
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2496/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:58) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.75432
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:31:59) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.64021
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:06) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.86951
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:06) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3.04101
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:07) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3.13415
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:07) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3.39207
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:07) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.69275
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:07) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.88529
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:15) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
0.764732
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2496/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:17) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
1.32144
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:18) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.08754
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:19) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
4.3649
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:19) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
5.76228
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:19) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
5.8012
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:25) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3.22565
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:25) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
1.55455
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:29) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
1.81217
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:30) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
5.50657
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:31) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
5.38842
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:32) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3.23045
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:33) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.47267
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:37) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
1.67862
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2496/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:39) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3.85713
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2496/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:40) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3.74014
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2496/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:40) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
4.49043
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:55) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
0.994823
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:40:39) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.06503
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:40:46) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.67107
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:40:47) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.85789
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:40:56) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
1.72876
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:41:00) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
1.39813
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2496/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:41:18) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.91284
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:41:27) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
4.49329
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:41:36) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3.44051
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:41:44) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.45848
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:41:53) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3.14364
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:42:04) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.74626
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:42:16) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3.88667
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:42:26) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.67879
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:42:36) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
2.99103
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:51:08) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
   n = int(input("numero :"))
print(soma)
	
-- ERROR:
File "XXXX", line 5
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:22) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
print(soma)
   n = int(input("numero :"))
	
-- ERROR:
File "XXXX", line 6
    n = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:52:43) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
   print(soma)
   n = int(input("numero :"))
	
-- EXECUTION TIME:
3.28092
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 5
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:13:13) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3887.65
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:14:12) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3946.08
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:14:13) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3946.39
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:14:13) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3949.09
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:14:13) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3947.08
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:15:08) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
n = int(input("numero :"))
	
	
-- EXECUTION TIME:
4007.59
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:32:04) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
4.29836
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:32:09) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3545.97
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:37:02) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
4.89294
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:37:02) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
n = int(input("numero :"))
	
	
-- EXECUTION TIME:
3360.63
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:37:06) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
6.78789
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:37:06) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
4.56208
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:37:06) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	print(soma)
   n = int(input("numero :"))
	
	
-- EXECUTION TIME:
6.02871
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 6
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:14:00) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
   n = int(input("numero :"))
   print(soma)
	
-- EXECUTION TIME:
0.162232
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 5
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:14:47) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	n = int(input("numero :"))
print(soma)
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:15:15) 
-- CODE:
n = int(input("numero :"))
soma=0
while(n != -1):
	soma=soma+n
	n = int(input("numero :"))
print(soma)
	
-- EXECUTION TIME:
0.155259
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
